@@ -10,6 +10,6 @@ public interface BaseMapper<F, T> {
     default List<T> toDtoList(List<F> elements) {
         return elements.stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+               .toList();
     }
 }
