@@ -13,7 +13,6 @@ import org.springframework.stereotype.Service;
 
 import java.time.Duration;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -42,20 +41,20 @@ public class AllegroLokalnieService implements SourceService {
 
         List<String> titles = document.getElementsByClass("mlc-itembox__title").stream()
                 .map(e -> e.childNode(0).toString())
-                .collect(Collectors.toList());
+                .toList();
 
         List<String> prices = document.getElementsByClass("ml-offer-price__dollars").stream()
                 .map(e -> e.childNode(0).toString().replace(" ", "") + " PLN")
-                .collect(Collectors.toList());
+               .toList();
 
         List<String> urls = document.getElementsByClass("mlc-card mlc-itembox").stream()
                 .map(e -> e.attr("href"))
                 .map(s -> "https://allegrolokalnie.pl" + s)
-                .collect(Collectors.toList());
+               .toList();
 
         List<String> originIds = document.getElementsByClass("mlc-card mlc-itembox").stream()
                 .map(e -> e.attr("data-card-analytics-click"))
-                .collect(Collectors.toList());
+               .toList();
 
         return allegroLokalnieMapper.toItems(originIds, titles, prices, urls, search.getId());
     }
